# 2d-Platform-gamecpp

./: CMakeLists.txt  README.MD
headers/: Engine.hpp  Platform.hpp  Player.hpp
src/: Engine.cpp  Platform.cpp  Player.cpp  main.cpp
